idk why I work on holidays

--- a/index.html
+++ b/index.html
@@ -104,7 +104,6 @@
   <!-- End Google Tag Manager (noscript) -->
 
     <div class="wrapper mx-auto h-100">
-        <div class="cover">
             <!-- Hero -->
             <section class="hero position-relative jumbotron jumbotron-fluid bg-white h-100 mb-0" style="min-height: 500px !important;">
                 <div class="container hero-inner h-100">
@@ -113,18 +112,12 @@
                             <div class="row align-items">
                                 <div class="col-12" style="min-height: 300px !important;">
                                     <div class="text-center text-lg-left text-blue">
-                                      <div id="typed-strings">
-                                          <h1>La seule newsletter par des étudiants <strong>entrepreneurs</strong></h1>
-                                      </div>
-                                      <div id="typed-strings-2">
-                                          <h1>Pour des étudiants <strong>entreprenant</strong>.</h1>
-                                      </div>
-                                      <h1 class="xl-font-size font-weight__500"><span id="typed2"></span></h1>
+                                      <h1 class="xxxxl-font-size font-weight__500">La seule newsletter par des étudiants <span class="highlighted-yellow">entrepreneurs</span>.</h1>
 
-                                      <h1 class="xl-font-size font-weight__500"><span id="typed3"></span></h1>
-
+                                      <h1 class="xxxxl-font-size font-weight__500">Pour des étudiants <span class="highlighted-yellow">entreprenant</span>.</h1>
                                     </div>
                                     <!-- Empty Space -->
+                                    <div class="md-space"></div>
                                     <div class="md-space"></div>
                                     <!--/ End Empty Space -->
                                    <!--  <div class="text-center text-lg-left">
@@ -139,7 +132,7 @@
                                                 <input type="email" class="w-150 form-control rounded border-color-light-gray sm-font-size required email" placeholder="Rentre ton e-mail..." value="" name="EMAIL" id="mce-EMAIL">
                                             </div>
                                             <div class="col-12 col-md-4 pl-md-0 mt-3 mt-md-0">
-                                                <button type="submit" class="text-blue w-100 btn btn-primary mb-2 rounded sm-font-size" type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe">Entreprendre</button>
+                                                <button type="submit" class="text-blue w-100 btn btn-primary mb-2 rounded sm-font-size" type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe">Go!</button>
                                             </div>
                                         </div>
                                         <div class="xs-font-size text-center text-lg-left text-gray">Sans engagement - Sans carte bleue</div>
@@ -165,7 +158,6 @@
                 left: 40% !important; width: 868px !important;" alt="Hero Image">
             </section>
             <!--/ End Hero -->
-        </div>
         <section class="CTA section bg-light-gray">
             <div class="container">
                 <div class="row no-gutters">
@@ -581,19 +573,11 @@
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.9"></script>
 
     <script>
-      var typed2 = new Typed('#typed2', {
-          stringsElement: '#typed-strings',
-          typeSpeed: 120,
-          smartBackspace: true,
-          backSpeed: 30,
-          fadeOut: true,
-          loop: false
-          });
 
      var typed3 = new Typed('#typed3', {
           stringsElement: '#typed-strings-2',
-          typeSpeed: 120,
-          startDelay: 9500,
+          typeSpeed: 90,
+          startDelay: 8000,
           backSpeed: 30,
           fadeOut: true,
           loop: false
