--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                                     <form action="https://stationl.us19.list-manage.com/subscribe/post?u=0ea66fb1b6e9b423f966ed5ab&amp;id=a55042a2e5" method="post" id="mc-embedded-subscribe-form" style="position:absolute;bottom:0;" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                                         <div class="row">
                                             <div class="col-12 col-md-8" style="font-size: 112.5% !important">
-                                                <input type="email" class="w-150 form-control rounded border-color-light-gray sm-font-size required email" placeholder="Rentre ton e-mail..." value="" name="EMAIL" id="mce-EMAIL">
+                                                <input type="email" class="w-150 form-control rounded border-color-light-gray sm-font-size required email" placeholder="Rentre ton e-mail..."  size="35" value="" name="EMAIL" id="mce-EMAIL">
                                             </div>
                                             <div class="col-12 col-md-4 pl-md-0 mt-3 mt-md-0">
                                                 <button type="submit" class="text-blue w-100 btn btn-primary mb-2 rounded sm-font-size" type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe">Go!</button>
