--- a/index.html
+++ b/index.html
@@ -158,26 +158,6 @@
                 left: 40% !important; width: 868px !important;" alt="Hero Image">
             </section>
             <!--/ End Hero -->
-        <section class="CTA section bg-light-gray">
-            <div class="container">
-                <div class="row no-gutters">
-                    <div class="col-12">
-                        <div class="row">
-                            <div class="col-12">
-                                <div class="text-center">
-                                    <h2 class="l-font-size font-weight__500 text-blue">
-                                        Comment l'entrepreneuriat peut <strong>t'aider à t'épanouir pleinement</strong> ?
-                                    </h2>
-                                    <h2 class="l-font-size font-weight__500 text-blue">
-                                        Comment se connecter avec des étudiants qui veulent <strong> se former et porter leur projet</strong>?
-                                    </h2>
-
-                                </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
         <!-- Features -->
         <section class="features section bg-light">
             <div class="container">
@@ -187,15 +167,14 @@
                             <div class="col-12">
                                 <div class="text-center">
                                     <h2 class="xxl-font-size font-weight__700 text-blue">
-                                        Tu souhaiterais te former sur le sujet mais tu ne sais pas à qui faire confiance ?
-
-
+                                        Pourquoi nous faire confiance ?
                                     </h2>
                                     <!-- Empty Space -->
                                     <div class="py-1"></div>
                                     <!--/ Empty Space -->
                                     <p class="base-plus-font-size text-blue">
-                                        La Newsletter Station L te donne accès à la communauté des étudiants entrepreneurs de L'EM
+                                        Station L c'est une équipe passionnée. Entrepreneur, pro du marketing, banquier, musicien, dev... On est partout.
+                                        On te donne un accès à la seule et l'unique communauté d'étudiants entrepreneurs de L'EM
                                     </p>
                                 </div>
                             </div>
@@ -214,7 +193,7 @@
                                         </div>
                                         <div class="col-12 col-lg-9 pl-lg-0">
                                             <h3 class="base-font-size font-weight__700 mb-0 text-center text-lg-left">
-                                              Des ressources
+                                              Pour notre experience
                                             </h3>
                                             <!-- Empty Space -->
                                             <div class="pt-1"></div>
@@ -236,13 +215,13 @@
                                         </div>
                                         <div class="col-12 col-lg-9 pl-lg-0">
                                             <h3 class="base-font-size font-weight__700 mb-0 text-center text-lg-left">
-                                                Des outils utiles
+                                              Pour nos outils
                                             </h3>
                                             <!-- Empty Space -->
                                             <div class="pt-1"></div>
                                             <!--/ Empty Space -->
                                             <p class="sm-font-size text-dark-gray text-center text-lg-left">
-                                                Pour monter son site, se lancer sans argent, encaisser des paiements ...
+                                                Monter son site, se lancer sans argent, encaisser des paiements...
                                             </p>
                                         </div>
                                     </div>
@@ -264,7 +243,7 @@
                                             <div class="pt-1"></div>
                                             <!--/ Empty Space -->
                                             <p class="sm-font-size text-dark-gray text-center text-lg-left">
-                                                Des news, fun facts pour ta culture entrepreneuriale (et briller en HH)
+                                                Gagner de l'argent, passer aux infos, impressionner sa maman
                                             </p>
                                         </div>
                                     </div>
