--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                                     <div class="text-center text-lg-left text-blue">
                                       <h1 class="xxxxl-font-size font-weight__500">La seule newsletter par des étudiants <span class="highlighted-yellow">entrepreneurs</span>.</h1>
 
-                                      <h1 class="xxxxl-font-size font-weight__500">Pour des étudiants <span class="highlighted-yellow">entreprenant</span>.</h1>
+                                      <h1 class="xxxxl-font-size font-weight__500">Pour des étudiants <span class="highlighted-yellow">entreprenants</span>.</h1>
                                     </div>
                                     <!-- Empty Space -->
                                     <div class="md-space"></div>
