--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                                     <!--/ Empty Space -->
                                     <p class="base-plus-font-size text-blue">
                                         Station L c'est une équipe passionnée. Entrepreneur, pro du marketing, banquier, musicien, dev... On est partout.
-                                        On te donne un accès à la seule et l'unique communauté d'étudiants entrepreneurs de L'EM
+                                        On te donne un accès à la seule et l'unique communauté d'étudiants entrepreneurs de France
                                     </p>
                                 </div>
                             </div>
