--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
                             <div class="col-12">
                                 <div class="row align-items-center">
                                     <div class="col-12 col-lg-6 mb-4 mb-lg-0">
-                                        <div class="text-center">
+                                        <div class="text-center" style="filter: blur(12px);">
                                             <img src="assets/images/emotr.jpg" class="img-fluid" alt="Feature Image">
                                         </div>
                                     </div>
